terraform/modules/networking/vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "local-transcribe-vpc-${var.environment_name}"
  }
}
